option('doc',
       type: 'boolean',
       value: false,
       description: 'Build the documentation')
option('static-glib',
       type: 'boolean',
       value: false,
       description: 'Statically link GLib and GIO to partup')
option('tests',
       type: 'boolean',
       value: true,
       description: 'Build the tests')
